tests/negative/parser_bad3.sp
(* Parameters without type *)

func : Int (argv) {
	return 0;
}

main : Int () {
	return 0;
}
